# anonymizer

./: .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml  tox.yml
anonymizor/: __init__.py  anonymizor.py
ansible_anonymizer/: __init__.py  anonymizer.py  cli.py  field_checks.py  jinja2.py  node.py  parser.py  parser_multi_lines.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_anonymizer.py  test_anonymizor.py  test_field_checks.py  test_jinja2.py  test_node.py  test_parser.py  test_parser_multi_lines.py
