[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-anonymizer"
description = "Ansible Anonymizer"
readme = "README.rst"
authors = [{ name = "Gonéri Le Bouder", email = "goneri@lebouder.net" }]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
keywords = ["pii", "anonymize"]

[project.urls]
Homepage = "https://github.com/ansible/anonymizer"

[project.optional-dependencies]
test = [
    "tox",
]

[tool]

[tool.setuptools]
packages = ["ansible_anonymizer"]

[tool.setuptools.dynamic]
version = {attr = "ansible_anonymizer.__version__"}

[tool.black]
line-length = 100
fast = true
skip-string-normalization = true

[tool.isort]
profile = "black"
