[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-anonymizer"
description = "Ansible Anonymizer"
readme = "README.rst"
authors = [{ name = "Gonéri Le Bouder", email = "goneri@lebouder.net" }]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
keywords = ["pii", "anonymize"]

[project.urls]
Homepage = "https://github.com/ansible/anonymizer"

[project.optional-dependencies]
test = [
    "tox",
]

[project.scripts]
ansible-anonymizer = "ansible_anonymizer.cli:main"


[tool]

[tool.setuptools]
packages = ["ansible_anonymizer"]

[tool.setuptools.dynamic]
version = {attr = "ansible_anonymizer.__version__"}

[tool.black]
line-length = 100
fast = true
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "ISC", # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "S",  # bandit
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]
ignore = ["D107", "D203", "D212", "D100", "D103", "PGH003", "D401", "SIM114", "ISC003", "SIM108"]

[tool.pyright]
include = ["ansible_anonymizer"]

[tool.ruff.per-file-ignores]
"tests/test_anonymizer.py" = ["S101", "S105"]
"tests/test_field_checks.py" = ["S101", "S105"]
"tests/test_jinja2.py" = ["S101", "S105"]
"tests/test_node.py" = ["S101", "S105"]
"tests/test_parser.py" = ["S101", "S105"]
"tests/test_parser_multi_lines.py" = ["S101", "S105"]


[tool.pylint."MESSAGES CONTROL"]
disable = ["too-few-public-methods"]
